--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/jetstream": "^4.2",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0",
-        "spatie/laravel-livewire-wizard": "^2.2"
+        "livewire/livewire": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
